src/test/ui/issues/issue-23046.stderr
error[E0282]: type annotations needed for the closure `fn(Expr<'_, _>) -> Expr<'_, _>`
  --> $DIR/issue-23046.rs:18:9
   |
LL |         let_(add(x,x), |y| {
   |         ^^^^ cannot infer type for type parameter `VAR` declared on the function `let_`
   |
help: give this closure an explicit return type without `_` placeholders
   |
LL |             let_(add(x, x), |x|-> Expr<'_, _> { x })})};
   |                                ^^^^^^^^^^^^^^^^   ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
